[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
nalgebra = "0.32.3"
num-traits = "0.2.17"
range-ext = "0.3.0"
rangemap = "1.4.0"
rayon = "1.8.0"
regex = "1.10.2"
smallvec = "1.11.2"

[dev-dependencies]
criterion = "0.5.1"

[features]
default = [
    "criterion/real_blackbox"
]

[[bench]]
name = "d05brute"
harness = false
